--- a/Pages/Ccchecker.razor
+++ b/Pages/Ccchecker.razor
@@ -3,9 +3,10 @@
 <PageTitle>CC Checker v1</PageTitle>
 
 <div class=".panel-body"> 
+  <h1>This Public(Free) Checker Only Checks one Cc</h1>
     <div class='alert alert-danger text-center info' style="display: none">  </div>       
                  <div class="form-group"> 
-                         <textarea @bind="textcc" class="form-control" id="cc" name="cc" title="4552250055368xx3|08|2023|113" placeholder="4552250055368xx3|08|2023|113" required="required" ></textarea> 
+                         <textarea @bind="textcc" cols="5" rows="1" class="form-control" id="cc" name="cc" title="4552250055368xx3|08|2023|113" placeholder="4552250055368xx3|08|2023|113" required="required" ></textarea> 
                          </div> 
                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-md-offset-5"> 
                                  <div class="form-group"> 
@@ -14,44 +15,78 @@
                          </div> 
                  </div> 
 </div>
-@foreach(var x in @CcList){
-  
-    <div>
 
-    <p>@x</p>
-</div>
 
-}
+
 
 @code {
+  
     
-    public  List<string> CcList = new List<string>{};
-
-
+   // public  List<string> CcList = new List<string>{};
+    public virtual List<CcListUsedStrings> CcListUsed { get; set; } = new ();
     private string textcc { get; set; }
     private int currentCount = 0;
-
     private void IncrementCountog()
     {
         currentCount++;
-        CcList.Add($"lolo{currentCount}");
+        
     }
 
     //starts the cc checker using string from textarea
-    private void Start()
+    private  async Task Start()
     {
        gfc.CccheckerWK ccchecker = new gfc.CccheckerWK();
      string[] textLines = textcc.Split(new[]{ Environment.NewLine }, StringSplitOptions.None);
 
      
-
+       var x = "";
       foreach(var ln in textLines){
-
-        CcList.Add($"{ln}" + Environment.NewLine );
-        
-      }
+        if(ln.Length == 28 ){
+          x= x + ln + Environment.NewLine;
+        var y = new CcListUsedStrings();
+        y.StringValue = x;
+       CcListUsed.Add(y);
+        }
+       
+      }0
     //ccchecker.Start(textcc);
       
        textcc = "";
     }
+ private bool IsCcFormat(string str)
+        {
+         
+            System.Text.RegularExpressions.Regex card = new System.Text.RegularExpressions.Regex(@"^[1-9][0-9]{2}-[1-3]{3}-[0-9]{3}-[0-9]{3}$");
+            string myCard = str;
+            System.Text.RegularExpressions.Match m = card.Match(myCard);
+
+            if (m.Success)
+            {
+                return true;
+            }
+            return false;
+        }
+    public class CcListUsedStrings {
+         public string StringValue { get; set; }
+         
+     }
 }
+
+@if(@CcListUsed ==  null){
+ <p><em>Loading...</em></p>
+}else{
+
+<table class="table">
+
+@foreach(var x in @CcListUsed){
+  
+ <tr class="@x.StringValue">
+      <td value="@x.StringValue">✔ @x.StringValue.ToString()</td>
+ </tr>
+
+}
+
+</table>
+}
+
+
