--- a/Pages/amz/Login.razor
+++ b/Pages/amz/Login.razor
@@ -14,7 +14,7 @@
                                     <label for="ap_email" class="a-form-label">
                                     Email (phone for mobile accounts)
                                     </label>
-                                    <type="email" id="email" name="email" class="a-input-text a-span12 auth-autofocus auth-required-field" value="" required>
+                                    <type="email" id="email" name="email" class="a-input-text a-span12 auth-autofocus auth-required-field" value="" required> </type>
                                  </div>
                                  <div class="a-section">
                                     <span id="continue" class="a-button a-button-span12 a-button-primary"><span class="a-button-inner"><input id="continue" tabindex="5" class="a-button-input" type="submit" aria-labelledby="continue-announce"><span id="continue-announce" class="a-button-text" aria-hidden="true">
